Pantalla main con logo y color. Ya esta lista

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
 
     <string name="avg_heart_rate">Average Heart Rate</string>
     <string name="signals_status">Status</string>
+    <string name="Nursik_name">NURSIK</string>
 </resources>
