--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,13 @@
     <string name="app_name">HackathonApp</string>
     <string name="nursik_main_title">Nursik</string>
     <string name="welcome_sign_in">Welcome to Nursik!</string>
-    <string name="sign_in_to_start">Please sign in to start</string>
+    <string name="message_sign_in_to_start">Please sign in to start</string>
+    <string name="enter_email">Enter your email address</string>
+    <string name="enter_password">Enter password</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="sign_in">Sign in</string>
+    <string name="dont_have_account">Don\'t have an account?</string>
+    <string name="sign_up">Sign up</string>
 
     <string name="write_text">Write text here &#8230;</string>
 
