--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">HackathonApp</string>
+    <string name="tap_to_start">Tap Here To Start</string>
+
     <string name="nursik_main_title">Nursik</string>
     <string name="welcome_sign_in">Welcome to Nursik!</string>
     <string name="message_sign_in_to_start">Please sign in to start</string>
